--- a/base-micro/auth-service-dev.yml
+++ b/base-micro/auth-service-dev.yml
@@ -6,7 +6,7 @@ spring:
     # 服务与服务之间相互调用一般都是根据这个name 。
     name: auth-service-dev
   datasource:
-    url: jdbc:mysql://10.10.10.166:3306/rbac?useSSL=false&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://47.99.211.9:3306/auth?useSSL=false&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
     username: ENC(Q+Pn4LhPX8OZaLFS6EuoEg==)
     password: ENC(Q+Pn4LhPX8OZaLFS6EuoEg==)
     driver-class-name: com.mysql.jdbc.Driver
