--- a/base-micro/auth-service-dev.yml
+++ b/base-micro/auth-service-dev.yml
@@ -20,24 +20,45 @@ spring:
       max-lifetime: 1800000
       connection-timeout: 30000
 
+  #redis
   redis:
-      #数据库索引
-      database: 0
-      host: 47.99.211.9
-      port: 6379
-      password: ENC(Q+Pn4LhPX8OZaLFS6EuoEg==)
-      jedis:
-        pool:
-          #最大连接数
-          max-active: 8
-          #最大阻塞等待时间(负数表示没限制)
-          max-wait: -1
-          #最大空闲
-          max-idle: 8
-          #最小空闲
-          min-idle: 0
-      #连接超时时间
-      timeout: 10000
+    #redis机器ip
+    hostname: 47.99.211.9
+    #redis端口
+    port: 6379
+    #redis密码
+    password: ENC(Q+Pn4LhPX8OZaLFS6EuoEg==)
+    #redis超时时间（毫秒），如果不设置，取默认值2000
+    timeout: 10000
+    #最大空闲数
+    maxIdle: 300
+    #连接池的最大数据库连接数。设为0表示无限制,如果是jedis 2.4以后用redis.maxTotal
+    #maxActive=600
+    #控制一个pool可分配多少个jedis实例,用来替换上面的redis.maxActive,如果是jedis 2.4以后用该属性
+    maxTotal: 1000
+    #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+    maxWaitMillis: 1000
+    #连接的最小空闲时间 默认1800000毫秒(30分钟)
+    minEvictableIdleTimeMillis: 300000
+    #每次释放连接的最大数目,默认3
+    numTestsPerEvictionRun: 1024
+    #逐出扫描的时间间隔(毫秒) 如果为负数,则不运行逐出线程, 默认-1
+    timeBetweenEvictionRunsMillis: 30000
+    #是否在从池中取出连接前进行检验,如果检验失败,则从池中去除连接并尝试取出另一个
+    testOnBorrow: true
+    #在空闲时检查有效性, 默认false
+    testWhileIdle: true
+   
+    #redis集群配置
+    #spring.cluster.nodes=192.168.1.1:7001,192.168.1.1:7002,192.168.1.1:7003,192.168.1.1:7004,192.168.1.1:7005,192.168.1.1:7006
+    #spring.cluster.max-redirects=3
+     
+    #哨兵模式
+    #sentinel.host1=192.168.1.1
+    #sentinel.port1=26379
+     
+    #sentinel.host2=192.168.1.2
+    #sentinel.port2=26379
 
 mybatis:
   mapper-locations: classpath:/mapper/*
